WIP securized api development
